examples/test/testpolicy17939.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17939
  namespace: namespace315
spec:
  podSelector:
    matchLabels:
      key7: value3
      key2: value40
      key3: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value10
          key9: value36
      podSelector:
        matchLabels:
          key44: value41
          key25: value25
          key26: value16
